apps/bgd-rollouts/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bgd-rollouts-demo
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
  labels:
    app.kubernetes.io/name: bgd-rollouts-demo
    app.kubernetes.io/part-of: rhacm-day2-demo
